<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actionUndo"
        android:icon="@drawable/ic_undo"
        android:title="@string/pen_undo"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/actionRedo"
        android:icon="@drawable/ic_redo"
        android:title="@string/pen_redo"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/actionSaveSketch"
        android:icon="@drawable/ic_check"
        android:title="@string/pen_save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/actionClearSketch"
        android:title="@string/pen_clear"
        app:showAsAction="never" />
</menu>
